--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="created" content="2020-02-24">
   <meta name="author" content="Peter Matthews">
-  <link rel="stylesheet" href="./uisic_glossary/styles.css">
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
