--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <h1>Cave and Karst Glossary</h1>
 
-<p style="text-align: center;"><i>Leader: <a href="mailto:Peter%20Matthews%20-%20Glossary%20%3Cmatthews@melbpc.org.au%3E">Peter Matthews</a>, Australia.
-<br>Assisted by: <a href="mailto:Mike%20Lake%20-%20Glossary%20%3Cmikel@speleonics.com.au%3E">Mike Lake</a>, Australia.</i></p>
+<p style="text-align: center;"><i>Leader: <a href="mailto:matthews@melbpc.org.au">Peter Matthews</a>, Australia.
+<br>Assisted by: <a href="mailto:mikel@speleonics.com.au">Mike Lake</a>, Australia.</i></p>
 
 <!-- Top menu -->
 <nav class="menuhoriz">
