--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <p class="headSuperText" id="top">UIS Informatics Commission - Dictionary Sub-commission</p>
 
-<h1>Cave and Karst Glossary</h1>
+<h1>Cave and Karst Glossary Test</h1>
 
 <p style="text-align: center;"><i>Leader: <a href="mailto:matthews@melbpc.org.au">Peter Matthews</a>, Australia.
 <br>Assisted by: <a href="mailto:mikel@speleonics.com.au">Mike Lake</a>, Australia.</i></p>
