Changed timezone to Sydney.

--- a/assets/start.html
+++ b/assets/start.html
@@ -3,7 +3,7 @@
 <h1>Cave and Karst Glossary Project</h1>
 <h2>The UIS Glossary - Draft 1</h2>
 
-<p>This document was updated on: UPDATE_DATE</p>
+<p>This document was updated on: UPDATE_DATE Australia/Sydney time.</p>
 
 <nav class="menuhoriz">
 <p>
