Added version date, changed update to build date.

--- a/assets/start.html
+++ b/assets/start.html
@@ -3,8 +3,6 @@
 <h1>Cave and Karst Glossary Project</h1>
 <h2>The UIS Glossary - Draft 1</h2>
 
-<p>This document was updated on: UPDATE_DATE Australia/Sydney time.</p>
-
 <nav class="menuhoriz">
 <p>
 <a href="#origintro">Original introduction</a> | 
@@ -15,5 +13,6 @@
 </p>
 </nav>
 
-<p>This is a preliminary early version of the UIS Cave and Karst Glossary.</p>
+<p>This is a preliminary early version of the UIS Cave and Karst Glossary.<br>
+This is glossary version VERSION_DATE. This page was built on BUILD_DATE Australia/Sydney time.</p>
 
