Moved build date to header & changed its format.

--- a/assets/start.html
+++ b/assets/start.html
@@ -16,5 +16,5 @@
 </nav>
 
 <p>This is a preliminary early version of the UIS Cave and Karst Glossary.<br>
-This is glossary version VERSION_DATE. This page was built on BUILD_DATE Australia/Sydney time.</p>
+This is glossary version VERSION_DATE.</p>
 
