--- a/assets/header.html
+++ b/assets/header.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>UIS Glossary PM Draft</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="A glossary of speleological terms.">
+  <meta name="author" content="Peter Matthews, Mike Lake, Malcolm Field">
+  <meta name="date.modified" content="BUILD_DATE">
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="created" content="2022-11-25">
-  <meta name="author" content="Peter Matthews, Mike Lake, Malcolm Field">
+  <title>UIS Glossary of Speleology</title>
+
