--- a/assets/footer.html
+++ b/assets/footer.html
@@ -1,18 +1,17 @@
-<h2 id="refs">References</h2>
-
-TODO later
 
 <!-- Bottom menu -->
 <nav class="menuhoriz">
 <p>
 <a href="#top">Top</a> | 
-<a href="#draftglossary">Glossary</a> | 
-<a href="#origintro">Original introduction</a> | 
+<a href="#glossary">Glossary</a> | 
 <a href="#refs">References</a> | 
-<a href="lexgloss.html" target="_blank">The Project</a> | 
-<a href="index.html" target="_blank">UISIC</a> | 
-<a href="https://www.uis-speleo.org" target="_blank">UIS</a> 
-</p>
+<a href="#epaintro">EPA introduction</a> | 
+<a href="#licence">Licence</a> | 
+<a href="http://uisic.uis-speleo.org/lexgloss.html">The Project</a> | 
+<a href="http://uisic.uis-speleo.org/forum/viewforum.php?f=19">Forum</a> | 
+<a href="http://uisic.uis-speleo.org/lexintro.html">Dictionary</a> | 
+<a href="http://uisic.uis-speleo.org/index.html">UISIC</a> | 
+<a href="http://uis-speleo.org">UIS</a> </p>
 </nav>  <!-- end of menuhoriz -->
 
 <hr>
