Added main intro material, remove target=blank

--- a/assets/start.html
+++ b/assets/start.html
@@ -1,20 +1,59 @@
 </head>
-
 <body>
+<p class="headSuperText" id="top">International Union of Speleology
+<br>Informatics Commission - Dictionary Sub-commission</p>
 
-<h1>Cave and Karst Glossary Project</h1>
-<h2>The UIS Glossary - Draft 1</h2>
+<h1>The UIS Cave and Karst Glossary<br>Stage 1</h1>
 
+<p class="date-header">Published: VERSION_DATE</p>
+
+<!-- Top menu -->
 <nav class="menuhoriz">
 <p>
-<a href="#origintro">Original introduction</a> | 
-<a href="#refs">References</a> | 
-<a href="lexgloss.html" target="_blank">The Project</a> | 
-<a href="index.html" target="_blank">UISIC</a> | 
-<a href="https://www.uis-speleo.org" target="_blank">UIS</a> 
+<!-- <a href="#draftglossary">Glossary</a> | -->
+<a href="#references">References</a> | 
+<a href="#epaintro">EPA Introduction</a> | 
+<a href="#license">License</a> | 
+<a href="http://uisic.uis-speleo.org/lexgloss.html">The Project</a> | 
+<a href="http://uisic.uis-speleo.org/forum/viewforum.php?f=19">Forum</a> | 
+<a href="http://uisic.uis-speleo.org/lexintro.html">Dictionary</a> | 
+<a href="http://uisic.uis-speleo.org/index.html">UISIC</a> | 
+<a href="http://uis-speleo.org">UIS</a> | 
+<a href="#contact">Contact</a> 
 </p>
-</nav>
+</nav> <!-- end of menuhoriz -->
 
-<p>This is a preliminary early version of the UIS Cave and Karst Glossary.<br>
-This is glossary version VERSION_DATE.</p>
+<p>
+This is a works-in-progress Stage 1 of introducing the English version of the UIS Cave and Karst Glossary. 
+At this stage of the project it is effectively just a direct conversion of Malcolm Field's 2002 Second Edition 
+<a href="https://cfpub.epa.gov/ncea/risk/recordisplay.cfm?deid=54964">PDF</a> US-EPA publication 
+(<cite>A Lexicon of Cave and Karst Terminology with Special Reference to Environmental Karst Hydrology</cite>), 
+but with our Term Numbers added. With Malcolm's assistance we are using it as the starting point for a 
+major UIS Glossary resource. It replaces our initial Draft 1 of 2022-11-30 and fixes most of the conversion problems in that draft.
+</p>
+
+<p>Later stages will include internal cross-referencing, term-linking between the existing 
+<a href="http://uisic.uis-speleo.org/lexintro.html">UIS Multi-lingual Dictionary</a> and 
+the Glossary to provide definitions for the Dictionary's concepts, integration of 
+his non-English terms and synonyms with the Multi-lingual Dictionary, and the proper presentation of scientific equations. 
+We will of course be inviting improvements to Malcolm's terms, additional terms, the incorporation of other specialist 
+glossaries, and expansion into glossaries in other languages. The Glossary will also be integrated into the 
+<a href="http://uisic.uis-speleo.org/exchange/karstlink/index-en.html">UIS <cite>KarstLink</cite> Ontology</a> for Linked Data.
+</p>
+
+<p>
+Each term can be directly accessed or linked to by appending for example, #33, to the address of this page 
+in order to go directly to Term Number 33. These Term Numbers are now stable and are independent 
+from the Concept Numbers used in the Multi-lingual Dictionary. Similarly, details of references can be accessed: e.g. for 
+Reference [10], append #ref10 to the page address and press &lt;Enter&gt;. This web page can also be downloaded for offline use 
+(675KB). Printing or producing a PDF of this web page will run to about 207 A4 pages, with intelligent page breaks.
+</p>
+
+<p>
+The <a href="http://uisic.uis-speleo.org/lexgloss.html#conversion">conversion</a> from 
+the 2700-term PDF <cite>Lexicon</cite> to this web page has involved 
+quite a lot of detailed work, and there could be things we missed, so if you notice anything that needs fixing, please do 
+<a href="mailto:Peter Matthews - Glossary <matthews&#000000064;melbpc.org.au>"> email us</a> with the details. 
+Any temporary editorial comments added by the Glossary Project will show as [GP: .... ].
+</p>
 
