Added fix to make Glossary link in menus work.

--- a/assets/footer.html
+++ b/assets/footer.html
@@ -3,8 +3,8 @@
 <nav class="menuhoriz">
 <p>
 <a href="#top">Top</a> | 
-<a href="#glossary">Glossary</a> | 
-<a href="#refs">References</a> | 
+<a href="#the-glossary">Glossary</a> | 
+<a href="#references">References</a> | 
 <a href="#epaintro">EPA introduction</a> | 
 <a href="#licence">Licence</a> | 
 <a href="http://uisic.uis-speleo.org/lexgloss.html">The Project</a> | 
