Removed some unneded comments

--- a/assets/footer.html
+++ b/assets/footer.html
@@ -12,7 +12,7 @@
 <a href="http://uisic.uis-speleo.org/lexintro.html">Dictionary</a> | 
 <a href="http://uisic.uis-speleo.org/index.html">UISIC</a> | 
 <a href="http://uis-speleo.org">UIS</a> </p>
-</nav>  <!-- end of menuhoriz -->
+</nav>
 
 <hr>
 
@@ -21,6 +21,5 @@ Site: <a href="mailto:Peter Matthews - Glossary <matthews&#000000064;melbpc.org.
 </address
 
 </br>
-
 </body>
 </html>
