--- a/glossary_content/intro.html
+++ b/glossary_content/intro.html
@@ -1,4 +1,3 @@
-</head>
 <body>
 <p class="headSuperText" id="top">International Union of Speleology
 <br>Informatics Commission - Dictionary Sub-commission</p>
@@ -10,7 +9,6 @@
 <!-- Top menu -->
 <nav class="menuhoriz">
 <p>
-<!-- <a href="#draftglossary">Glossary</a> | -->
 <a href="#references">References</a> | 
 <a href="#epaintro">EPA Introduction</a> | 
 <a href="#license">License</a> | 
@@ -21,7 +19,7 @@
 <a href="http://uis-speleo.org">UIS</a> | 
 <a href="#contact">Contact</a> 
 </p>
-</nav> <!-- end of menuhoriz -->
+</nav>
 
 <p>
 This is a works-in-progress Stage 1 of introducing the English version of the UIS Cave and Karst Glossary. 
