Removed whitespace and linebreak.

--- a/glossary_content/intro.html
+++ b/glossary_content/intro.html
@@ -1,6 +1,5 @@
 <body>
-<p class="headSuperText" id="top">International Union of Speleology
-<br>Informatics Commission - Dictionary Sub-commission</p>
+<p class="headSuperText" id="top">International Union of Speleology<br>Informatics Commission - Dictionary Sub-commission</p>
 
 <h1>The UIS Cave and Karst Glossary<br>Stage 1</h1>
 
