--- a/assets/header.html
+++ b/assets/header.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="A glossary of speleological terms.">
 <meta name="author" content="Peter Matthews, Mike Lake, Malcolm Field">
+<meta name="keywords" content="speleology,speleological,caves,caving,uis,uisic, karst, glossary, dictionary,lexicon,wordlist, ontology, cave terms,caving terms,speleological terms,karst terms">
 <meta name="date.modified" content="BUILD_DATE">
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
