Added favicon, longer description, other minor changes.

--- a/assets/header.html
+++ b/assets/header.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>UIS Glossary of Speleology</title>
+<title>UIS Glossary of Speleology Stage 1</title>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="A glossary of speleological terms.">
-<meta name="author" content="Peter Matthews, Mike Lake, Malcolm Field">
+<meta name="description" content="A glossary of cave and karst terms, co-ordinated by the UIS, the International Union of Speleology.">
+<meta name="author" content="Peter Matthews, Mike Lake, Malcolm Field (US-EPA)">
 <meta name="keywords" content="speleology,speleological,caves,caving,uis,uisic, karst, glossary, dictionary,lexicon,wordlist, ontology, cave terms,caving terms,speleological terms,karst terms">
 <meta name="date.modified" content="BUILD_DATE">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" href="http://uisic.uis-speleo.org/favicon.ico">
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
