--- a/glossary_content/intro.html
+++ b/glossary_content/intro.html
@@ -5,7 +5,6 @@
 
 <p class="date-header">Published: VERSION_DATE</p>
 
-<!-- Top menu -->
 <nav class="menuhoriz">
 <p>
 <a href="#references">References</a> | 
@@ -14,6 +13,7 @@
 <a href="http://uisic.uis-speleo.org/lexgloss.html">The Project</a> | 
 <a href="http://uisic.uis-speleo.org/forum/viewforum.php?f=19">Forum</a> | 
 <a href="http://uisic.uis-speleo.org/lexintro.html">Dictionary</a> | 
+<a href="http://uisic.uis-speleo.org/lexhist.html">History</a> | 
 <a href="http://uisic.uis-speleo.org/index.html">UISIC</a> | 
 <a href="http://uis-speleo.org">UIS</a> | 
 <a href="#contact">Contact</a> 
