--- a/assets/header.html
+++ b/assets/header.html
@@ -8,7 +8,7 @@
 <meta name="keywords" content="speleology,speleological,caves,caving,uis,uisic, karst, glossary, dictionary,lexicon,wordlist, ontology, cave terms,caving terms,speleological terms,karst terms">
 <meta name="date.modified" content="BUILD_DATE">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" href="http://uisic.uis-speleo.org/favicon.ico">
+<link rel="icon" type="image/x-icon" href="http://uisic.uis-speleo.org/favicon.ico">
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
