--- a/glossary_content/intro.html
+++ b/glossary_content/intro.html
@@ -26,16 +26,9 @@ At this stage of the project it is effectively just a direct conversion of Malco
 <a href="https://cfpub.epa.gov/ncea/risk/recordisplay.cfm?deid=54964">PDF</a> US-EPA publication 
 (<cite>A Lexicon of Cave and Karst Terminology with Special Reference to Environmental Karst Hydrology</cite>), 
 but with our Term Numbers added. With Malcolm's assistance we are using it as the starting point for a 
-major UIS Glossary resource. It replaces our initial Draft 1 of 2022-11-30 and fixes most of the conversion problems in that draft.
-</p>
-
-<p>Later stages will include internal cross-referencing, term-linking between the existing 
-<a href="http://uisic.uis-speleo.org/lexintro.html">UIS Multi-lingual Dictionary</a> and 
-the Glossary to provide definitions for the Dictionary's concepts, integration of 
-his non-English terms and synonyms with the Multi-lingual Dictionary, and the proper presentation of scientific equations. 
-We will of course be inviting improvements to Malcolm's terms, additional terms, the incorporation of other specialist 
-glossaries, and expansion into glossaries in other languages. The Glossary will also be integrated into the 
-<a href="http://uisic.uis-speleo.org/exchange/karstlink/index-en.html">UIS <cite>KarstLink</cite> Ontology</a> for Linked Data.
+major UIS Glossary resource. In April 2023 the UIS Caver's Multi-lingual Dictionary concepts were linked to this 
+Glossary, at last providing it with definitions. Both of these resources now form part of the UIS Dictionary System. 
+More details about the Glossary can be found on our <a href="http://uisic.uis-speleo.org/lexgloss.html">Project page</a>.
 </p>
 
 <p>
